--- a/deck.mdx
+++ b/deck.mdx
@@ -150,6 +150,10 @@ Fast downlaod of commit but moving between commits slow.
 
 - All commits in cache.git available in cloned repos
 
+---
+
+# How to Copy Commit from (Bare) Repo Cache II?
+
 ## `git clone --reference path/to/cache.git git@github.com/owner/repo.git`
 
 - creates a real clone but speeds up download by using the cache.git
